<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kj125.wwabiszczewicz.parentscontrol.AccessActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <Switch
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"

                android:checked="true"
                android:enabled="true"
                android:text="@string/dev1" />

            <Switch
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox"
                android:layout_below="@+id/checkBox"
                android:layout_gravity="right"

                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev2" />

            <Switch
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox2"
                android:layout_below="@+id/checkBox2"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev3" />

            <Switch
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox3"
                android:layout_below="@+id/checkBox3"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev4" />

            <Switch
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox4"
                android:layout_below="@+id/checkBox4"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev5" />

            <Switch
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox5"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev6" />

            <Switch
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:enabled="true"
                android:text="@string/dev7" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox6"
                android:layout_below="@+id/editText"
                android:layout_marginTop="18dp"
                android:gravity="bottom"
                android:text="@string/switch1" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#ffff0e0d"
                android:shadowColor="#ff000000"
                android:singleLine="false"
                android:text="Zastosuj"
                android:textColor="#ffffffff" />

            <LinearLayout
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="1">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
